styles.css
/* Imports */
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');

@font-face {
  font-family: "Excelerate";  /* ← YOU choose this name */
  src: url("./assets/fonts/excelate.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}

/* Design Tokens */
:root{
    /* Colors */
    --color--primary: black;
    --color--secondary: #DD1D25;
    --color--tertiary:  #F0C00C;
    --color--accent: #B3B3B3;
    --color--background: #FFFFFF;

    /* Fonts */
    --font--brand: "excelerate", sans-serif;
    --font-copy: "Oswald", sans-serif;
    
      /* Spacing System */
    --space-xs: 0.25rem;
    --space-sm: 0.5rem;
    --space-md: 1rem;
    --space-lg: 2rem;

    /* Font Sizes */
    --text-sm: 0.875rem;  /* 14px */
    --text-base: 1rem;    /* 16px */
    --text-lg: 1.25rem;   /* 20px */
    --text-xl: 1.75rem;   /* 28px */
    --text-xxl: 2.5rem;   /* 40px */

    @media(min-width: 768px){
    --text-sm: 1rem;  /* 14px */
    --text-base: 1.25rem;    /* 16px */
    --text-lg: 1.5rem;   /* 20px */
    --text-xl: 2.5rem;   /* 28px */
    --text-xxl: 3rem;   /* 40px */

    }


}

html {
  font-size: 16px;
}


body {
  font-family: var(--font-copy);
  font-size: var(--text-base);
  display: flex;
  flex-direction: column;
  background-color: var(--color--primary);
  color: var(--color--background);
  overflow-x: hidden;
  margin: 0;
  align-items: center;
}


/* Headings */

h1 {
  font-family: var(--font-copy);
  font-size: var(--text-xxl);
  margin-bottom: var(--space-md);
  font-weight: bold;
}

h2 {
  font-family: var(--font-copy);
  font-size: var(--text-xl);
  margin-bottom: var(--space-md);
  font-weight: bold;
}

h3 {
  font-family: var(--font-copy);
  font-size: var(--text-lg);
  margin-bottom: var(--space-sm);
  font-weight: bold;
}

h4 {
  font-family: var(--font-copy);
  font-size: var(--text-base);
  margin-bottom: var(--space-sm);
  font-weight: bold;
}

h5 {
  font-family: var(--font-copy);
  font-size: var(--text-sm);
  margin-bottom: var(--space-sm);
  font-weight: bold;
}



/* Paragraphs */

p {
  font-size: var(--text-base);
  margin-bottom: var(--space-md);
}


/* anchors */

a {
  font-size: var(--text-base);
  text-decoration: none;
  color: var(--color--background);
}

.button.red{
    text-align: center;
    background-color: var(--color--secondary);
    z-index: 3;
    width: 100px;
    height: 40px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}

.button.generic{
    padding: 10px 20px 10px 20px;
    border: 1px solid var(--color--primary);
    background-color: var(--color--primary);

}

/* Sections */

.section{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin-top: 0px;
    margin-bottom: 20px;

}

.section-inner{
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;

}

/* Navigation */

.nav{
    display: flex;
    flex-direction: row;
    position: sticky;
    width: 100%;
    height: 12.5vh;
    justify-content: flex-end;
    z-index: 1000;
    top: 0;
    background-color: var(--color--primary);
}

.nav::before{
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 12.5%;
    width: 100%;
    background-color: var(--color--tertiary);
}

.nav::after{
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    height: 12.5%;
    width: 100%;
    background-color: var(--color--tertiary);
}

.nav-logo{
    background-image: url(./assets/svg/logo.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    width: 250px;
    height: 80%;
    position: absolute;
    top: 10%;
    left: 50%;
    transform: translate(-55%);
}

.nav-hamburger{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: var(--color--background);
    position: relative;
    right: 5%;
}

.nav-buttons{
    display: none;
}


.hamburger {
    width: 30px;
    height: 3px;
    background-color: var(--color--background);
    position: relative;
}

.hamburger.active{
    color: var(--color--primary);
    background-color: var(--color--primary);
}

.nav-cta{
    display: none;
}

@media(min-width: 1024px){
    .nav{
        width: 100%;
        height: 17vh;
        display: grid;
        grid-template-columns: 1fr 1.5fr 0.75fr;
        grid-template-rows: 1fr;
        justify-content: space-between;
    }

    .nav-hamburger{
        display: none;
    }

    .nav-buttons{
        display: flex;
        align-items: center;
        justify-content: space-around;
        grid-column: 2 / 3;
        grid-row: 1 / 2;
        width: 100%;
        
    }

    .nav-logo{
        display: flex;
        justify-content: center;
        align-items: center;
        grid-column: 1 / 2;
        grid-row: 1 / 2;
        justify-self: center;
        align-self: center;
    }

    .nav-cta{
        grid-column: 3 / 4;
        grid-row: 1 / 2;
        display: flex;
        align-items: center;
        justify-content: center;
    }
}

/* COMMON LINE STYLES */
.hamburger::before,
.hamburger::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: var(--color--background);

    animation-duration: 0.5s;
    animation-fill-mode: forwards;
    animation-timing-function: ease-in-out;
}

/* INITIAL POSITIONS */
.hamburger::before {
    transform: translateY(-10px);
}

.hamburger::after {
    transform: translateY(10px);
}

/* FORWARD */
.hamburger.active::before {
    animation-name: moveupRotate;
}

.hamburger.active::after {
    animation-name: movedownRotate;
}
/* ... */

